# AmphiReach

./: .gitignore  GITHUB_COMMIT_GUIDE.md  LICENSE  fix_line_endings_migration.sh  fix_migration_script.sh  migrate_to_github_structure.sh  setup_github_repo.sh
ar_robot/: ar_robot.usd
ar_robot/configuration/: ar_robot_base.usd  ar_robot_physics.usd  ar_robot_robot.usd  ar_robot_sensor.usd
control/joint_control/: control_polls.sh  rotate_lid.py  rotate_lid.sh
control/mission_control/: mission_controller.py  mission_controller_standalone.py  mission_service.py
control/motor_control/: motor_controller.py  motor_controller_standalone.py  motor_force_applier.py  motor_force_plugin.py
docs/: GITHUB_STRUCTURE.md  MIGRATION_INSTRUCTIONS.md  MISSION_EXAMPLE.md  MOTOR_SETUP.md  PROJECT_SUMMARY.md  QUICK_FIX.md  QUICK_START_MOTORS.md  README.md  README_MISSION.md  README_MOTORS.md  README_TEMPLATE.md  UUV_SIMULATOR_GUIDE.md  VERSION_CHECK.md
models/meshes/: Lid.stl  base_link.stl  hull_l.stl  hull_r.stl  poll_l.stl  poll_r.stl
models/urdf/: ar_robot.urdf
ros2_package/: CMakeLists.txt  package.xml  setup.py
scripts/tools/: animate_waves.sh  check_versions.py  check_versions.sh  fix_line_endings.sh  view_urdf_wsl.sh
simulation/config/: model.config
simulation/scripts/: run_mission.sh  run_simulation.sh  run_simulation_complete.sh  run_simulation_with_animation.py  run_simulation_with_animation_velocity.py  run_simulation_with_motors.sh  wave_animation.py  (+1 more)
tests/: test_joint_control.py  test_mission.py  test_motor_control.py  test_single_joint.py
(+3 files in other folders)
